Fix overlap

--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -7,6 +7,7 @@
     color: #000;
     top: 0;
     background-color: #fff;
+    z-index: 1;
 }
 
 .logo{
